[BE] 재수정